Use URI.